--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     </header>
     <main>
       <!-- hero -->
-      <section class="hero section">
-        <div class="container hero-container">
+      <section class="hero-section">
+        <div class="hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="modal-button button">
             Order Service
@@ -72,6 +72,11 @@
           <h2 hidden class="section-title">features</h2>
           <ul class="features-list list">
             <li class="feature-item">
+              <div class="feature-wrapper">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="subtitle features-subtitle">Strategy</h3>
               <p class="item-description">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrapper">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="subtitle features-subtitle">Punctuality</h3>
               <p class="item-description">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrapper">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="subtitle features-subtitle">Diligence</h3>
               <p class="item-description">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrapper">
+                <svg class="feature-icon" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="subtitle features-subtitle">Technologies</h3>
               <p class="item-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -109,7 +129,7 @@
           <ul class="list services-list">
             <li class="services-item">
               <img
-                src="./images/img_1.jpg"
+                src="./images/services/img_1.jpg"
                 alt="website on the screen"
                 width="360"
                 height="300"
@@ -117,7 +137,7 @@
             </li>
             <li class="services-item">
               <img
-                src="./images/img_2.jpg"
+                src="./images/services/img_2.jpg"
                 alt="mobile phone with different pages"
                 width="360"
                 height="300"
@@ -125,7 +145,7 @@
             </li>
             <li class="services-item">
               <img
-                src="./images/img_3.jpg"
+                src="./images/services/img_3.jpg"
                 alt="mobile phone and a computer"
                 width="360"
                 height="300"
@@ -136,13 +156,12 @@
       </section>
       <!-- team -->
       <section class="section team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
-                class="team-img"
-                src="./images/Mark_Guerrero.jpg"
+                src="./images/team/Mark_Guerrero.jpg"
                 alt="a man with beard smiling"
                 width="264"
                 height="260"
@@ -152,12 +171,61 @@
                 <p class="item-description team-description">
                   Product Designer
                 </p>
+                <ul class="team-social-list social-list list">
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
               <img
-                class="team-img"
-                src="./images/Tom_Ford.jpg"
+                src="./images/team/Tom_Ford.jpg"
                 alt="blond guy smiling"
                 width="264"
                 height="260"
@@ -167,12 +235,61 @@
                 <p class="item-description team-description">
                   Frontend Developer
                 </p>
+                <ul class="team-social-list social-list list">
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
               <img
-                class="team-img"
-                src="./images/Camila_Garcia.jpg"
+                src="./images/team/Camila_Garcia.jpg"
                 alt="brunette girl smiling"
                 width="264"
                 height="260"
@@ -180,12 +297,61 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Camila Garcia</h3>
                 <p class="item-description team-description">Marketing</p>
+                <ul class="team-social-list social-list list">
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
               <img
-                class="team-img"
-                src="./images/Daniel_Wilson.jpg"
+                src="./images/team/Daniel_Wilson.jpg"
                 alt="young brunette guy smiling"
                 width="264"
                 height="260"
@@ -193,22 +359,199 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
                 <p class="item-description team-description">UI Designer</p>
+                <ul class="team-social-list social-list list">
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a
+                      href=""
+                      class="team-social-link social-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section customers">
+        <h2 class="section-title">Customers</h2>
+        <ul class="list customers-list">
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo1"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo2"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo3"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo5"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a
+              href=""
+              class="link customers-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#logo6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link footer-logo">
-          Web<span class="logo logo-accent">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing &#38; growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-left-wrapper">
+          <a href="./index.html" class="logo link footer-logo">
+            Web<span class="logo logo-accent">Studio</span></a
+          >
+          <p class="footer-slogan">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#38; growth solutions.
+          </p>
+        </div>
+        <div class="footer-right-wrapper">
+          <p class="footer-text">Social media</p>
+          <ul class="footer-social-list list">
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
