--- a/portfolio.html
+++ b/portfolio.html
@@ -83,134 +83,154 @@
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img_9.jpg"
-                  width="360"
-                  alt="application pages"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">
-                    Banking App Interface Concept
-                  </h2>
-                  <p class="portfolio-description">App</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_9.jpg"
+                    width="360"
+                    alt="application pages"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">
+                      Banking App Interface Concept
+                    </h2>
+                    <p class="portfolio-description">App</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img1.jpg"
-                  width="360"
-                  alt="qr-code scanning"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Cashless Payment</h2>
-                  <p class="portfolio-description">Marketing</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img1.jpg"
+                    width="360"
+                    alt="qr-code scanning"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">
+                      Cashless Payment
+                    </h2>
+                    <p class="portfolio-description">Marketing</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img2.jpg"
-                  width="360"
-                  alt="phone and computer screens"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Meditation App</h2>
-                  <p class="portfolio-description">App</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img2.jpg"
+                    width="360"
+                    alt="phone and computer screens"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">Meditation App</h2>
+                    <p class="portfolio-description">App</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img3.jpg"
-                  width="360"
-                  alt="steering wheel"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Taxi Service</h2>
-                  <p class="portfolio-description">Marketing</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img3.jpg"
+                    width="360"
+                    alt="steering wheel"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">Taxi Service</h2>
+                    <p class="portfolio-description">Marketing</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img4.jpg"
-                  width="360"
-                  alt="mobile wallpapers"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">
-                    Screen Illustrations
-                  </h2>
-                  <p class="portfolio-description">Design</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img4.jpg"
+                    width="360"
+                    alt="mobile wallpapers"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">
+                      Screen Illustrations
+                    </h2>
+                    <p class="portfolio-description">Design</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img5.jpg"
-                  width="360"
-                  alt="girl with a phone"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Online Courses</h2>
-                  <p class="portfolio-description">Marketing</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img5.jpg"
+                    width="360"
+                    alt="girl with a phone"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">Online Courses</h2>
+                    <p class="portfolio-description">Marketing</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img6.jpg"
-                  width="360"
-                  alt="instagram stories designes"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">
-                    Instagram Stories Concept
-                  </h2>
-                  <p class="portfolio-description">Design</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img6.jpg"
+                    width="360"
+                    alt="instagram stories designes"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">
+                      Instagram Stories Concept
+                    </h2>
+                    <p class="portfolio-description">Design</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img7.jpg"
-                  width="360"
-                  alt="fruits and vegetables in a bag"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Organic Food</h2>
-                  <p class="portfolio-description">Web Site</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img7.jpg"
+                    width="360"
+                    alt="fruits and vegetables in a bag"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">Organic Food</h2>
+                    <p class="portfolio-description">Web Site</p>
+                  </div>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  class="portfolio-img"
-                  src="./images/img8.jpg"
-                  width="360"
-                  alt="pouring milk in coffee"
-                />
-                <div class="portfolio-card">
-                  <h2 class="subtitle portfolio-subtitle">Fresh Coffee</h2>
-                  <p class="portfolio-description">Web Site</p>
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-card-wrapper">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img8.jpg"
+                    width="360"
+                    alt="pouring milk in coffee"
+                  />
+                  <div class="portfolio-card">
+                    <h2 class="subtitle portfolio-subtitle">Fresh Coffee</h2>
+                    <p class="portfolio-description">Web Site</p>
+                  </div>
                 </div>
               </a>
             </li>
@@ -220,14 +240,69 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link footer-logo">
-          Web<span class="logo logo-accent">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing &#38; growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-left-wrapper">
+          <a href="./index.html" class="logo link footer-logo">
+            Web<span class="logo logo-accent">Studio</span></a
+          >
+          <p class="footer-slogan">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#38; growth solutions.
+          </p>
+        </div>
+        <div class="footer-right-wrapper">
+          <p class="footer-text">Social media</p>
+          <ul class="footer-social-list list">
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href=""
+                class="footer-social-link social-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
