--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
     <main>
       <!-- hero -->
       <section class="hero-section">
-        <div class="hero-container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="modal-button button">
-            Order Service
-          </button>
-        </div>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="modal-button button">Order Service</button>
       </section>
       <!-- features -->
       <section class="section features">
@@ -415,76 +411,78 @@
         </div>
       </section>
       <section class="section customers">
-        <h2 class="section-title">Customers</h2>
-        <ul class="list customers-list">
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo1"></use></svg
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo2"></use></svg
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo3"></use></svg
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo4"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo5"></use></svg
-            ></a>
-          </li>
-          <li>
-            <a
-              href=""
-              class="link customers-link"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#logo6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo1"></use></svg
+              ></a>
+            </li>
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo2"></use></svg
+              ></a>
+            </li>
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo3"></use></svg
+              ></a>
+            </li>
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo5"></use></svg
+              ></a>
+            </li>
+            <li class="customers-item">
+              <a
+                href=""
+                class="link customers-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
